# makker

./: CMakeLists.txt  TODO.txt  main.cpp
ast/: Ast.cpp  Ast.h
doc/: goals-and-vision.txt  syntax.txt
doc/example-project/: artifacts.mkr  example_usage.txt  root.mkr  tools.mkr
doc/example-project/prslib/: build.mkr  funcs.cpp  funcs.h  prslib.cpp  prslib.h  test.cpp
doc/example-project/testje/: build.mkr  main  main.cpp  util.cpp  util.h
interpreter/: BasicObjectStore.cpp  BasicObjectStore.h  Environment.cpp  Environment.h  Interpreter.cpp  Interpreter.h  Object.cpp  Object.h  RootScope.cpp  RootScope.h  Scope.h  ScopeWrapper.cpp  ScopeWrapper.h  tests.cpp
lexer/: Lexer.cpp  Lexer.h  Scanner.h  StringScanner.cpp  StringScanner.h  Token.cpp  Token.h  tests.cpp
mkr/: Repl.cpp  Repl.h  Shell.cpp  Shell.h  main.cpp
parser/: Ast.cpp  Ast.h  DefaultParser.cpp  DefaultParser.h  ImportResolver.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Source.h  StaticImportResolver.cpp  StaticImportResolver.h  StringSource.cpp  StringSource.h  Token.h  Traverser.cpp  Traverser.h  test_lexer.cpp  test_parser.cpp  tests.cpp
util/: AstSerializer.cpp  AstSerializer.h  InterpretResultPrinter.cpp  InterpretResultPrinter.h  RewindableTokenStream.cpp  RewindableTokenStream.h  StaticTokenStream.cpp  StaticTokenStream.h  tests.cpp
